force-app/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__RevenueScheduleTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueScheduleTermEndDate__c</fullName>
    <inlineHelpText>End date can be based on the object&apos;s end date or entered manually. For full recognition,
        set it to None.</inlineHelpText>
    <label>Revenue Schedule Term End Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueScheduleEndDate</valueSetName>
    </valueSet>
</CustomField>