force-app/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__RevenueTransactionCreationProcess__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueTransactionCreationProcess__c</fullName>
    <inlineHelpText>Select whether revenue transactions are created automatically or manually</inlineHelpText>
    <label>Revenue Transaction Creation Process</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueTransactionCreationProcess</valueSetName>
    </valueSet>
</CustomField>