force-app/main/default/objects/blng__RevenueDistributionMethod__c/fields/blng__Type__c.field-meta.xml
<CustomField>
    <fullName>blng__Type__c</fullName>
    <inlineHelpText>Select which type of record to use for revenue distribution.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueDistributionMethodType</valueSetName>
    </valueSet>
</CustomField>