force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__CannotSpecifyRevDatesifTransTypeAutomati.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__CannotSpecifyRevDatesifTransTypeAutomati</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL(blng__RevenueTransactionCreationProcess__c  , &apos;Automatic&apos;))  &amp;&amp;  
(ISPICKVAL(blng__RevenueScheduleTermStartDate__c, &apos;Manual&apos;) ))
 || 
(ISPICKVAL(blng__RevenueTransactionCreationProcess__c, &apos;Automatic&apos;)
&amp;&amp;
(ISPICKVAL(blng__RevenueScheduleTermEndDate__c, &apos;Manual&apos;)))</errorConditionFormula>
    <errorMessage>Cannot select Manual on Revenue Schedule Term Start Date or Revenue Schedule End Date when Revenue Transaction Creation Process is Automatic</errorMessage>
</ValidationRule>