force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__DontSpecifyFRDateIfCreationProcessManual.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__DontSpecifyFRDateIfCreationProcessManual</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(blng__DistributionMethod__c, &apos;Full Recognition&apos;)
&amp;&amp;
ISPICKVAL( blng__RevenueTransactionCreationProcess__c, &apos;Automatic&apos;)
&amp;&amp;
ISPICKVAL(  blng__FullRecognitionDate__c , &apos;Manual&apos;)</errorConditionFormula>
    <errorMessage>Full Recognition date cannot be Manual when Revenue Transaction Creation Process is Automatic</errorMessage>
</ValidationRule>