force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__DontSpecifyStartDateEndDateForFullRecogn.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__DontSpecifyStartDateEndDateForFullRecogn</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(blng__DistributionMethod__c, &apos;Full Recognition&apos;))
&amp;&amp;
(
(!ISPICKVAL(blng__RevenueScheduleTermEndDate__c, &apos;&apos;))
|| 
(!ISPICKVAL(blng__RevenueScheduleTermStartDate__c, &apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Revenue Schedule Start Date and End Date should not be specified when distribution method is Full Recognition</errorMessage>
</ValidationRule>