force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__FullRecDateEmptyForDailyMonthlyMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__FullRecDateEmptyForDailyMonthlyMethod</fullName>
    <active>true</active>
    <errorConditionFormula>(
(!ISPICKVAL(blng__DistributionMethod__c, &apos;Full Recognition&apos;))
&amp;&amp;
(!ISPICKVAL(blng__FullRecognitionDate__c,&apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Full Recognition Date cannot be selected when Distribution Method is other than Full Recognition</errorMessage>
</ValidationRule>