force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__FullRecognitionDateIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__FullRecognitionDateIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(blng__DistributionMethod__c, &apos;Full Recognition&apos;)
&amp;&amp; 
ISPICKVAL( blng__FullRecognitionDate__c,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>blng__FullRecognitionDate__c</errorDisplayField>
    <errorMessage>Full Recognition Date is required when Distribution Method = Full Recognition</errorMessage>
</ValidationRule>