force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__FulRecDateCanbeManualifTransTypeManual.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__FulRecDateCanbeManualifTransTypeManual</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(blng__DistributionMethod__c, &apos;Full Recognition&apos;)
&amp;&amp;
ISPICKVAL(blng__RevenueTransactionCreationProcess__c, &apos;Manual&apos;)
&amp;&amp;
(!ISPICKVAL(blng__FullRecognitionDate__c , &apos;Manual&apos;))</errorConditionFormula>
    <errorMessage>Full Recognition Date should only be manual when Revenue Transaction Creation Process is Manual</errorMessage>
</ValidationRule>