force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__RevenueScheduleStartDateAlignWithType.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__RevenueScheduleStartDateAlignWithType</fullName>
    <active>true</active>
    <description>Revenue Schedule Start Date should align with Type.</description>
    <errorConditionFormula>(ISPICKVAL(blng__Type__c, &apos;Order&apos;) 
&amp;&amp; 
(ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Invoice Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Credit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Debit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Other&apos;))
)

|| 

(ISPICKVAL(blng__Type__c, &apos;Invoice&apos;) 
&amp;&amp; 
(ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Order Product Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Credit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Debit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Other&apos;))
)

||

(ISPICKVAL(blng__Type__c, &apos;Credit Note&apos;) 
&amp;&amp; 
(ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Debit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Invoice Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Order Product Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Other&apos;))
)

||

(ISPICKVAL(blng__Type__c, &apos;Debit Note&apos;) 
&amp;&amp; 
(ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Credit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Invoice Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Order Product Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Other&apos;))
)

||

(ISPICKVAL(blng__Type__c, &apos;Other&apos;)
&amp;&amp;
(ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Debit Note Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Invoice Line Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Order Product Start Date&apos;)
||
ISPICKVAL
(blng__RevenueScheduleTermStartDate__c, &apos;Credit Note Line Start Date&apos;))
)</errorConditionFormula>
    <errorMessage>Revenue Schedule Start Date should be aligned with Type</errorMessage>
</ValidationRule>