force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__TermEndDateIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__TermEndDateIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL( blng__DistributionMethod__c, &apos;Monthly&apos;))
 || 
(ISPICKVAL( blng__DistributionMethod__c, &apos;Daily&apos;)))
&amp;&amp;
ISPICKVAL( blng__RevenueScheduleTermEndDate__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>blng__RevenueScheduleTermEndDate__c</errorDisplayField>
    <errorMessage>Term End Date is required when Distribution Method = Monthly / Daily</errorMessage>
</ValidationRule>