force-app/main/default/objects/blng__RevenueDistributionMethod__c/validationRules/blng__TermStartDateIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__TermStartDateIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL( blng__DistributionMethod__c, &apos;Monthly&apos;))
 || 
(ISPICKVAL( blng__DistributionMethod__c, &apos;Daily&apos;)))
&amp;&amp;
ISPICKVAL( blng__RevenueScheduleTermStartDate__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>blng__RevenueScheduleTermStartDate__c</errorDisplayField>
    <errorMessage>Term Start Date  is required when Distribution Method = Monthly / Daily</errorMessage>
</ValidationRule>